--- a/src/app/components/template/new-post-form/new-post-form.component.html
+++ b/src/app/components/template/new-post-form/new-post-form.component.html
@@ -1,3 +1,46 @@
-<p>
-  new-post-form works!
-</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      <h1>New post</h1>
+    </mat-card-title>
+    <mat-card-subtitle>
+      <h2>What do you watching?</h2>
+    </mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-form-field>
+      <mat-label>Your github username</mat-label>
+      <input matInput [(ngModel)]="post.user" />
+      <mat-hint>Ex: @jhon, @Maria</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Title of post</mat-label>
+      <input matInput [(ngModel)]="post.title" />
+      <mat-hint>Ex: Matrix</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="textArea">
+      <mat-label>Write about do you watching...</mat-label>
+      <textarea
+        matInput
+        class="textAreaContent"
+        [(ngModel)]="post.postContent"
+      ></textarea>
+    </mat-form-field>
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <button
+      mat-button
+      color="primary"
+      (click)="publish()"
+      [disabled]="!post.user && !post.title && !post.postContent"
+    >
+      Publish <i class="material-icons">rate_review</i>
+    </button>
+    <button mat-button color="warn" (click)="cancel()">
+      {{ !post.postContent ? 'Back' : 'Cancel' }}
+      <i class="material-icons">cancel</i>
+    </button>
+  </mat-card-actions>
+</mat-card>
