feat: finalizando desafio

--- a/src/app/components/template/new-post-form/new-post-form.component.html
+++ b/src/app/components/template/new-post-form/new-post-form.component.html
@@ -33,7 +33,7 @@
     <button
       mat-button
       color="primary"
-      (click)="publish()"
+      (click)="salvar()"
       [disabled]="!post.user && !post.title && !post.postContent"
     >
       Publish <i class="material-icons">rate_review</i>
