--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -1,4 +1,4 @@
-.toolbar{
+.toolbar {
   height: 50%;
   background-color: var(--dark-grey);
   justify-content: center;
@@ -12,34 +12,37 @@
   flex-direction: column;
 }
 
-.logo{
+.logo {
   margin: 2rem 0;
   width: 250px;
-  opacity: .8;
-  transition: .2s;
+  opacity: 0.8;
+  transition: 0.2s;
 }
 
-.logo:hover, .title-group:hover{
+.logo:hover,
+.title-group:hover {
   opacity: 1;
 }
 
-.logo:active, .title-group:active{
+.logo:active,
+.title-group:active {
   opacity: 1;
 }
 
-.title-group{
+.title-group {
   display: flex;
   align-items: center;
-  opacity: .8;
-  transition: .2s;
+  opacity: 0.8;
+  transition: 0.2s;
 }
 
-.title-group h1,i{
+.title-group h1,
+i {
   font-size: 2rem;
   margin-bottom: 2rem;
 }
 
-.mat-button{
+.mat-button {
   background-color: var(--darkest-grey);
   border: none;
   border-radius: 4px;
@@ -49,67 +52,71 @@
   background-color: var(--white);
 }
 
-.link{
+.link {
   text-decoration: none;
-
 }
 
-.mat-menu-description{
+.link-item {
+  padding: 0 4px;
+}
+
+.mat-menu-description {
   color: var(--black);
 }
 
-.list{
+.list {
   display: none;
+  cursor: pointer;
 }
 
-
 @media screen and (min-width: 768px) {
-  .toolbar{
+  .toolbar {
     height: 120px;
     justify-content: space-between;
   }
 
-  .toolbar a{
+  .toolbar a {
     align-items: baseline;
     flex-direction: row;
   }
 
-  .logo{
+  .logo {
     width: 170px;
   }
 
-  .title-group h1, i{
+  .title-group h1,
+  i {
     font-size: 2.5rem;
   }
 
-  nav{
+  nav {
     position: absolute;
     right: 0;
-    margin: 2.5rem .5rem 0;
-
+    margin: 2.5rem 0.5rem 0;
   }
 
-  .list{
+  .list {
     display: inline-flex;
     list-style: none;
   }
 
-  .list-item{
-    margin: 2rem .1rem 1rem 1rem;
-    opacity: .8;
-    transition: .2s;
+  .list-item {
+    margin: 2rem 0.1rem 1rem 1rem;
+    opacity: 0.8;
+    transition: 0.2s;
   }
 
-  .link-item:hover, .link-item:active{
+  .link-item:hover,
+  .link-item:active {
     opacity: 1;
     transform: translate(-2px);
   }
 
-  .mat-button{
+  .mat-button {
     display: none;
   }
 
-  ::ng-deep .mat-menu-content:disabled{
+  ::ng-deep .mat-menu-content:disabled {
     display: none;
   }
 }
