--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,16 +1,24 @@
 <mat-toolbar class="toolbar mat-elevation-z4">
   <a routerLink="/">
-    <img src="assets/img/logo.svg" alt="logo" class="logo">
+    <img src="assets/img/logo.svg" alt="logo" class="logo" />
     <div class="title-group">
       <i class="material-icons">theaters</i>
       <h1>Files Blog</h1>
     </div>
 
     <nav>
-      <button class="mat-button" mat-icon-button [matMenuTriggerFor]="afterMenu">
+      <button
+        class="mat-button"
+        mat-icon-button
+        [matMenuTriggerFor]="afterMenu"
+      >
         <mat-icon>menu</mat-icon>
       </button>
-      <mat-menu class="mat-menu-content disabled" #afterMenu="matMenu" xPosition="after">
+      <mat-menu
+        class="mat-menu-content disabled"
+        #afterMenu="matMenu"
+        xPosition="after"
+      >
         <button mat-menu-item>
           <a routerLink="/" class="link">
             <mat-icon class="mat-menu-description">home</mat-icon>
@@ -29,14 +37,14 @@
 
   <ul class="list">
     <li>
-      <a class="link-item" title="Home" (click)="about()">
-        <mat-icon >home</mat-icon>
+      <a class="link-item" title="Home">
+        <mat-icon>home</mat-icon>
         <span>Home</span>
       </a>
     </li>
     <li>
       <a class="link-item" title="about the author" (click)="about()">
-        <mat-icon >import_contacts</mat-icon>
+        <mat-icon>import_contacts</mat-icon>
         <span>About the author</span>
       </a>
     </li>
