--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Material+Icons|Material+Icons+Outlined');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined');
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-:root{
+:root {
   --white: #f2f2f2;
   --black: #000;
   --dark-grey: #2c2c2c;
@@ -16,28 +16,29 @@
   --green: #4cd62b;
 }
 
-html, body{
+html,
+body {
   height: 100%;
 }
 
-body{
+body {
   margin: 0;
-  font-family: 'Inter',sans-serif;
+  font-family: 'Inter', sans-serif;
   background-color: var(--darkest-grey);
 }
 
-.msg-error{
+.msg-error {
   background-color: var(--red);
   color: var(--white);
 }
 
-.msg-success{
+.msg-success {
   background-color: var(--green);
   color: var(--white);
 }
 
-@media screen and (min-width: 768px){
-  body{
+@media screen and (min-width: 768px) {
+  body {
     background-color: var(--darkest-grey);
     background-image: url(./assets/img/logo.svg);
     background-repeat: no-repeat;
@@ -48,14 +49,20 @@ body{
   }
 
   @keyframes backgroundFadeIn {
-    from{
+    from {
       opacity: 0;
     }
-    to{
+    to {
       opacity: 1;
     }
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
